tests/baselines/reference/implicitAnyInAmbientDeclaration2.d.errors.txt
==== tests/cases/compiler/implicitAnyInAmbientDeclaration2.d.ts (9 errors) ====
    declare function foo(x);  // this should be an error
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! implicitAnyInAmbientDeclaration2.d.ts(1,1): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                         ~
!!! implicitAnyInAmbientDeclaration2.d.ts(1,22): error TS7006: Parameter 'x' of 'foo' implicitly has an 'any' type.
    declare var bar;  // this should be be an erro
                ~~~
!!! implicitAnyInAmbientDeclaration2.d.ts(2,13): error TS7005: Variable 'bar' implicitly has an 'any' type.
    declare class C {
        public publicMember;  // this should be an error
        ~~~~~~~~~~~~~~~~~~~~
!!! implicitAnyInAmbientDeclaration2.d.ts(4,5): error TS7005: Variable 'publicMember' implicitly has an 'any' type.
        private privateMember;  // this should not be an error
    
        public publicFunction(x);  // this should be an error
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! implicitAnyInAmbientDeclaration2.d.ts(7,5): error TS7010: 'publicFunction', which lacks return-type annotation, implicitly has an 'any' return type.
                              ~
!!! implicitAnyInAmbientDeclaration2.d.ts(7,27): error TS7006: Parameter 'x' of 'publicFunction' implicitly has an 'any' type.
        private privateFunction(privateParam);  // this should not be an error
        private constructor(privateParam);  // this should not be an error
        ~~~~~~~
!!! implicitAnyInAmbientDeclaration2.d.ts(9,5): error TS1089: 'private' modifier cannot appear on a constructor declaration.
                            ~~~~~~~~~~~~
!!! implicitAnyInAmbientDeclaration2.d.ts(9,25): error TS7006: Parameter 'privateParam' of 'C' implicitly has an 'any' type.
    }
    
    declare class D {
        public constructor(publicConsParam, int: number);  // this should be an error
                           ~~~~~~~~~~~~~~~
!!! implicitAnyInAmbientDeclaration2.d.ts(13,24): error TS7006: Parameter 'publicConsParam' of 'D' implicitly has an 'any' type.
    }